# epsic

./: CMakeLists.txt  README.md
include/: PromoteTraits.h
test/: CMakeLists.txt  test_Dirac.cpp
